Added action buttons...only graphical for now:)

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8344,8 +8344,10 @@ button.close {
   opacity: 0.5;
 }
 
-td {
+td,
+th {
   vertical-align: middle !important;
+  text-align: center;
 }
 
 .alert {
