--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8357,3 +8357,9 @@ th {
 .alert span {
   font-size: 25px;
 }
+
+.btn-round {
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+}
